# shak2d

./: CMakeLists.txt  moveDirection.hpp
SDL/: RenderWindow.cpp  RenderWindow.hpp  autoTex.cpp  autoTex.hpp  main.cpp  main.hpp
game/inGame/: Updatable.hpp
game/inGame/Entities/: Renderable.cpp  Renderable.hpp
game/inGame/Entities/playables/Player/: Player.cpp  Player.hpp
gameManager/: gameManager.cpp  gameManager.hpp
gameManager/level/: Level.cpp  Level.hpp
gameManager/sprite/: sprite.hpp
helper/: Coord.hpp
texDict/: texDict.cpp  texDict.hpp
